--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
   --color-white: #ffffff;
   --color-lightgrey: rgb(245, 245, 245);
   --color-highlight: #e63946;
-  --color-text: black;
+  --color-text: #000000;
 
   /* Font size */
   --font-large: 48px;
