--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ p {
 
 /* Home */
 #home {
-  background-color: var(--color-white);
+  /*background-color: var(--color-white);*/
   padding: 40px;
   padding-top: 110px;
   text-align: center;
