--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ p {
 .navbar__logo {
   font-size: var(--font-small);
   font-weight: var(--weight-semi-bold);
-  color: var(--color-text);
+  color: var(--color-white);
   margin: 10px;
 }
 
