--- a/style.css
+++ b/style.css
@@ -159,20 +159,19 @@ p {
   background: url("images/IMG_4856.png") center/cover no-repeat;
   padding: 40px;
   padding-top: 110px;
-  text-align: center;
 }
 
-.home__title,
+/*.home__title,
 .home__description {
   color: var(--color-text);
-}
+}*/
 
-.home__avatar {
+/*.home__avatar {
   width: 150px;
   height: 150px;
   border-radius: 30%;
   border: 2px solid var(--color-white);
-}
+}*/
 
 .home__contact {
   font-size: var(--font-regular);
