--- a/style.css
+++ b/style.css
@@ -158,6 +158,7 @@ p {
 #home {
   padding: 40px;
   padding-top: 250px;
+  text-align: center;
 }
 
 .home__title,
@@ -166,7 +167,7 @@ p {
 }
 
 .home__avatar {
-  width: 300px;
+  width: 500px;
 }
 
 .home__contact {
