--- a/style.css
+++ b/style.css
@@ -158,6 +158,7 @@ p {
 #home {
   padding: 40px;
   padding-top: 250px;
+  padding-bottom: 350px;
   text-align: center;
 }
 
@@ -194,7 +195,7 @@ p {
 }
 
 .about__text {
-  text-align: left;
+  text-align: center;
   margin-top: 30px;
 }
 
