--- a/style.css
+++ b/style.css
@@ -203,7 +203,7 @@ p {
   /* elements in a box */
   display: block;
   /* spacing */
-  text-align: left;
+  text-align: center;
   margin: 60px 0;
 }
 
