--- a/style.css
+++ b/style.css
@@ -201,7 +201,7 @@ p {
 
 .about__jobs {
   /* elements in a box */
-  display: block;
+  display: flex;
   /* spacing */
   text-align: center;
   margin: 60px 0;
@@ -216,8 +216,6 @@ p {
 .job__title {
   font-size: var(--font-regular);
   font-weight: var(--weight-semi-bold);
-  width: 100%;
-  padding-left: 15px;
   margin: auto;
 }
 
