--- a/style.css
+++ b/style.css
@@ -215,6 +215,7 @@ p {
 .job__title {
   font-size: var(--font-regular);
   font-weight: var(--weight-semi-bold);
+  padding-bottom: 20px;
   margin: auto;
 }
 
