--- a/style.css
+++ b/style.css
@@ -216,6 +216,7 @@ p {
 .job__title {
   font-size: var(--font-regular);
   font-weight: var(--weight-semi-bold);
+  width: 100%;
   padding-bottom: 20px;
   margin: auto;
 }
