--- a/style.css
+++ b/style.css
@@ -140,9 +140,7 @@ p {
 }
 
 .navbar__menu__item:hover {
-  background-color: var(--color-highlight);
-  border-radius: var(--size-border-radius);
-  color: var(--color-white);
+  color: var(--color-highlight);
 }
 
 .navbar__toggle-btn {
