--- a/style.css
+++ b/style.css
@@ -154,9 +154,9 @@ p {
 
 /* Home */
 #home {
-  width: 100%;
-  padding-top: 250px;
-  padding-bottom: 250px;
+  background: url("images/front.png") center/cover no-repeat;
+  padding: 40px;
+  padding-top: 110px;
   text-align: center;
 }
 
