--- a/style.css
+++ b/style.css
@@ -65,12 +65,12 @@ button {
 .section {
   text-align: center;
   padding: 30px;
-  margin: auto;
+  margin: 50px;
 }
 
 .section__container {
   max-width: 1200px;
-  margin: auto;
+  margin: 50px;
 }
 
 /* Typography */
