--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ p {
 /* Navigation bar */
 #navbar {
   position: fixed;
+  top: 0;
   display: flex;
   width: 100%;
   justify-content: space-between;
@@ -149,7 +150,7 @@ p {
   right: 32px;
   font-size: 24px;
   color: var(--color-dark);
-  display: none;
+  display: inline-block;
 }
 
 /* Home */
