--- a/style.css
+++ b/style.css
@@ -107,6 +107,7 @@ p {
 #navbar {
   position: fixed;
   top: 0;
+  padding: 0;
   display: flex;
   width: 100%;
   justify-content: space-between;
@@ -158,8 +159,8 @@ p {
   background: url("images/front.png") center/cover no-repeat;
   padding: 40px;
   padding-top: 110px;
-  margin-top: 250px;
-  margin-bottom: 250px;
+  margin-top: 150px;
+  margin-bottom: 150px;
   text-align: center;
 }
 
