--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ p {
   right: 32px;
   font-size: 24px;
   color: var(--color-dark);
-  display: inline-block;
+  display: none;
 }
 
 /* Home */
@@ -240,9 +240,8 @@ p {
   margin: 60px 40px 20px 40px;
 }
 .category__btn {
-  border-radius: var(--size-border-radius);
   font-size: var(--font-medium);
-  padding: 8px 20px;
+  padding: 10px 20px;
   margin: 5px 5px;
   background-color: var(--color-white);
 }
@@ -259,15 +258,8 @@ p {
   padding: 30px;
   margin: auto;
   margin-bottom: 30px;
-  overflow: hidden;
-  opacity: 1;
-  transition: all var(--animation-duration) ease;
 }
 
-.projects__item.animation {
-  opacity: 0;
-  transform: scale(0.97) translateY(10px);
-}
 
 .project {
   position: relative;
@@ -296,7 +288,6 @@ p {
 
 .project__description {
   position: absolute;
-  background-color: var(--color-dark);
   width: 100%;
   height: 100%;
   top: 0;
@@ -305,14 +296,10 @@ p {
   flex-direction: column;
   justify-content: center;
   opacity: 0;
-  transform: translateY(5px);
-  transition: all var(--animation-duration) ease-in;
-  border-radius: 5px;
 }
 
 .project:hover .project__description {
-  opacity: 0.8;
-  transform: translateY(0px);
+  color: var(--color-highlight);
 }
 
 .project__description h3,
