--- a/style.css
+++ b/style.css
@@ -162,6 +162,10 @@ p {
   margin-top: 150px;
   margin-bottom: 150px;
   text-align: center;
+  width:100%;
+  height:100%;
+  object-fit: cover;
+  overflow: hidden;
 }
 
 .home__title,
