--- a/style.css
+++ b/style.css
@@ -156,7 +156,10 @@ p {
 
 /* Home */
 #home {
-  background: url("images/front.png") center/cover no-repeat;
+  background: url("images/front.png");
+  background-repeat:no-repeat;
+  background-position:center;
+  background-size:contain;
   padding: 40px;
   padding-top: 110px;
   margin-top: 150px;
@@ -164,8 +167,6 @@ p {
   text-align: center;
   width:100%;
   height:100%;
-  object-fit: cover;
-  overflow: hidden;
 }
 
 .home__title,
