--- a/style.css
+++ b/style.css
@@ -158,6 +158,7 @@ p {
 #home {
   padding: 40px;
   padding-top: 110px;
+  padding-bottom: 110px;
   margin-top: 150px;
   margin-bottom: 150px;
   text-align: center;
